--- a/app/src/main/res/layout/activity_welcom.xml
+++ b/app/src/main/res/layout/activity_welcom.xml
@@ -12,7 +12,9 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="200dp"
-            android:background="@drawable/ic_welcome_logo" />
+            android:background="@drawable/ic_welcome_logo"
+            android:clickable="true"
+            android:onClick="testApi" />
 
     </RelativeLayout>
 </layout>
