--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,4 +12,8 @@
         <item name="colorControlActivated">#66FFFFFF</item>
     </style>
 
+    <style name="ThemeHome" parent="Theme.AppCompat.Light">
+        <item name="colorPrimary">@color/colorPrimary</item>
+    </style>
+
 </resources>
