--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="whilte">#FFFFFF</color>
 
     <color name="bg_gray">#FFFFFF</color>
+    <color name="gray_bg">#FAFAFA</color>
+    <color name="green">#83d383</color>
 
     <!-- 字体 -->
     <color name="font_normal">#262626</color>
