--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,9 @@
         <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:textSize">12sp</item>
     </style>
+
+    <style name="CardViewClick">
+        <item name="android:foreground">?android:attr/selectableItemBackground</item>
+    </style>
+
 </resources>
