--- a/app/src/main/res/layout/fragment_profit.xml
+++ b/app/src/main/res/layout/fragment_profit.xml
@@ -37,7 +37,7 @@
             app:tabMode="scrollable"
             app:tabRippleColor="#06000000" />
 
-        <androidx.viewpager.widget.ViewPager
+        <com.metron.coin.view.NoScrollViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
