--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/whilte"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:text="Fanta"
-                android:textColor="@color/whilte"
+                android:textColor="@color/white"
                 android:textSize="@dimen/font_24" />
 
             <TextView
