--- a/app/src/main/res/layout/layout_title_bar_black_fragment.xml
+++ b/app/src/main/res/layout/layout_title_bar_black_fragment.xml
@@ -10,25 +10,17 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:scaleType="centerInside"
-        android:src="@drawable/ic_back" />
-
-    <ImageView
-        android:id="@+id/title_right"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:scaleType="centerInside"
-        android:visibility="gone"/>
+        android:src="@drawable/ic_back_black" />
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/title_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:textColor="@color/white"
-        android:textSize="@dimen/font_20"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="16dp"
+        android:textColor="#15233E"
+        android:textSize="17sp"
         tools:text="Title" />
-
 
 </RelativeLayout>
