--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="black">#000000</color>
-    <color name="whilte">#FFFFFF</color>
+    <color name="white">#FFFFFF</color>
 
     <color name="bg_gray">#FFFFFF</color>
     <color name="gray_bg">#FAFAFA</color>
