--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,13 +3,13 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimaryDark">@android:color/transparent</item>
+        <item name="colorAccent">@android:color/transparent</item>
 
         <!-- AppCompatEditText默认状态状态设置底线颜色 -->
-        <item name="colorControlNormal">#66FFFFFF</item>
+        <item name="colorControlNormal">@color/colorPrimary</item>
         <!-- AppCompatEditText选择的底线颜色 -->
-        <item name="colorControlActivated">#66FFFFFF</item>
+        <item name="colorControlActivated">@color/colorPrimary</item>
     </style>
 
     <style name="ThemeHome" parent="Theme.AppCompat.Light">
