--- a/app/src/main/res/layout/layout_markview.xml
+++ b/app/src/main/res/layout/layout_markview.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:gravity="center_horizontal"
     android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/tv_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/white" />
 
     <TextView
         android:id="@+id/tv_value0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:textColor="@android:color/white" />
+        android:textColor="#15233E"
+        android:textSize="12sp"
+        tools:text="4" />
 
     <TextView
-        android:visibility="gone"
-        android:id="@+id/tv_value1"
+        android:id="@+id/tv_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/white" />
+        android:textColor="#6D7686"
+        android:textSize="10sp"
+        tools:text="2021/03/05" />
 
 </LinearLayout>
